--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,23 @@ body {
   width: 100%;
 }
 
+/* Common Classes */
+
+.description,
+.service-description {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.3rem;
+}
+
+.portfolio-header,
+.about-header,
+.service-header {
+  font-family: 'Bebas Neue', sans-serif;
+  font-size: 3rem;
+  align-self: flex-end;
+  margin-bottom: 1.5rem;
+}
+
 /* Navbar Styling */
 
 .navbar {
@@ -67,7 +84,7 @@ body {
   background-color: #ddd;
   color: #000;
   list-style: none;
-  transition: all 0.7s ease-in-out;
+  transition: all 0.3s ease-in-out;
 }
 
 .navmenu li {
@@ -162,13 +179,6 @@ body {
   transform: skewY(5deg);
 }
 
-.portfolio-header {
-  font-family: 'Bebas Neue', sans-serif;
-  font-size: 3rem;
-  align-self: flex-end;
-  margin-bottom: 1.5rem;
-}
-
 /* Portfolio item */
 
 .portfolio-item {
@@ -182,13 +192,106 @@ body {
 }
 
 .portfolio-item h3 {
-  align-self: center;
-  margin: 1.5rem 0.5rem;
+  align-self: flex-start;
+  margin: 1.5rem 0;
   font-size: 2rem;
-  font-weight: 300;
+  font-weight: 500;
 }
 
 .portfolio-item img {
-  width: 300px;
-  height: 300px;
+  width: 100%;
+  height: 100%;
+  transform: scale(2);
+  margin: 1rem 0;
+}
+
+.portfolio-item p {
+  margin: 2rem 0;
+  font-weight: 700;
+}
+
+.portfolio-item .btn {
+  width: 10.63rem;
+  height: 2.688rem;
+  text-align: center;
+  background: var(--primary-color);
+  color: var(--secondary-color);
+  padding: 0.625rem 0.75rem;
+  text-decoration: none;
+  margin: 0.5rem;
+}
+
+.portfolio-item .buttons {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+}
+
+/* About Section */
+
+.about {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  padding: 5rem 1.75rem;
+}
+
+.about-header {
+  align-self: center;
+  margin-bottom: 2rem;
+  font-size: 4rem;
+}
+
+.description p {
+  margin-bottom: 1rem;
+}
+
+/* Services section */
+
+.services {
+  max-width: 100%;
+  height: 100%;
+  padding: 5.75rem 1.625rem;
+  background-color: var(--secondary-mobile);
+  color: var(--primary-color);
+  margin: 4rem 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: visible;
+}
+
+.services::before,
+.services::after {
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: inherit;
+  z-index: -1;
+  top: 0;
+  transform-origin: left top;
+  transform: skewY(-5deg);
+}
+
+.services::after {
+  bottom: 0;
+  transform-origin: left bottom;
+  transform: skewY(5deg);
+}
+
+.service-header {
+  align-self: center;
+  font-size: 4rem;
+}
+
+.service-description {
+  font-weight: 700;
 }
