--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,6 @@ body {
 
 a {
   text-decoration: none;
-  color: var(--secondary-color);
 }
 
 /* Common Classes */
@@ -114,6 +113,13 @@ a {
   /* justify-content: center; */
 }
 
+.hero-content {
+  width: 100%;
+  height: 100%;
+  align-self: center;
+  justify-self: center;
+}
+
 .header {
   font-family: 'Bebas Neue', sans-serif;
   text-align: center;
@@ -142,12 +148,8 @@ a {
   text-align: right;
 }
 
-.arrow-down {
+.hero-image {
   display: none;
-  font-size: 2rem;
-  justify-self: flex-end;
-  padding-top: 8rem;
-  /* font-weight: 400; */
 }
 
 /* Portfolio */
@@ -196,13 +198,14 @@ a {
   align-items: center;
   justify-content: center;
   font-family: 'Open Sans', sans-serif;
+  margin: 1.5rem 0;
 }
 
 .portfolio-item h3 {
   align-self: flex-start;
   margin: 1.5rem 0;
   font-size: 2rem;
-  font-weight: 500;
+  font-weight: bold;
 }
 
 .portfolio-item img {
@@ -219,7 +222,7 @@ a {
 
 .portfolio-item .btn {
   width: 10.63rem;
-  height: 2.688rem;
+  height: 100%;
   text-align: center;
   background: var(--primary-color);
   color: var(--secondary-color);
@@ -317,6 +320,7 @@ a {
   border: none;
   margin-top: 1.5rem;
   align-self: center;
+  border-radius: 0.5rem;
 }
 
 .footer {
@@ -335,9 +339,319 @@ a {
 
 .footer .social {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   padding: 0 1rem;
   margin: 1rem 0;
   font-size: 2rem;
+  width: 100%;
+}
+
+.footer a {
+  color: var(--secondary-color);
+}
+/* Media Queries */
+
+/*  Tablet Mode */
+
+/* Ipad */
+
+@media screen and (min-width: 700px) and (max-width: 1024px) {
+  .container {
+    max-width: 900px;
+  }
+
+  .hero {
+    padding-bottom: 7.125rem;
+  }
+
+  .navmenu li {
+    font-size: 1.7rem;
+  }
+
+  .hero-content {
+    max-width: 560px;
+  }
+
+  .content span {
+    font-size: 2.5rem;
+  }
+
+  .header {
+    font-size: 5rem;
+  }
+
+  .description,
+  .service-description {
+    max-width: 600px;
+  }
+
+  .services::before,
+  .services::after,
+  .portfolio::before,
+  .portfolio::after {
+    transform: skewY(-5deg);
+    -webkit-transform: skew(-5deg);
+    -moz-transform: skew(-5deg);
+    -o-transform: skew(-5deg);
+    -ms-transform: skew(-5deg);
+  }
+
+  .description p,
+  .service-description p {
+    font-size: 1.3rem;
+  }
+
+  .portfolio-header {
+    align-self: center;
+    font-size: 4rem;
+  }
+
+  .portfolio-item {
+    /* margin: 2rem 0; */
+    max-width: 800px;
+  }
+
+  .portfolio-item h3 {
+    font-size: 2.5rem;
+    padding: 0 3rem;
+    align-self: center;
+  }
+
+  .portfolio-item img {
+    width: 100%;
+    height: 100%;
+    transform: scale(1.6);
+    margin: 1rem 0;
+    overflow: hidden;
+  }
+
+  .portfolio-item p {
+    font-size: 1.3rem;
+    padding: 0 3rem;
+  }
+
+  .footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .footer span {
+    font-size: 1.5rem;
+    align-self: center;
+  }
+
+  .footer .social {
+    max-width: 600px;
+  }
+
+  .btn-contact {
+    width: 9rem;
+    font-size: 1.1rem;
+    padding: 1.2rem 1.4rem;
+  }
+
+  .portfolio-item .btn {
+    padding: 1.2rem 1.4rem;
+    font-size: 1.1rem;
+    width: 12.63rem;
+    height: 100%;
+  }
+}
+/* Ipad landscape */
+
+@media screen and (min-width: 1024px) and (max-height: 768px) and (orientation: landscape) {
+  .container {
+    max-width: 1000px;
+  }
+
+  .description,
+  .service-description {
+    max-width: 800px;
+  }
+
+  .btn-contact {
+    width: 10rem;
+  }
+}
+
+/* Ipad Pro Potrait */
+
+@media screen and (min-width: 1024px) and (max-width: 1366px) {
+  .container {
+    max-width: 1000px;
+  }
+
+  .content {
+    max-width: 1000px;
+  }
+
+  .content span {
+    font-size: 3rem;
+  }
+
+  .header {
+    font-size: 5rem;
+  }
+
+  .description p,
+  .service-description p,
+  .portfolio-item p {
+    font-size: 1.6rem;
+  }
+
+  .portfolio-item {
+    max-width: 1000px;
+  }
+
+  .btn-contact {
+    font-size: 1.3rem;
+  }
+
+  .portfolio-item h3 {
+    font-size: 3rem;
+  }
+
+  .portfolio-item .btn {
+    padding: 1.2rem 1.4rem;
+    font-size: 1.3rem;
+    width: 16.63rem;
+  }
+}
+
+@media screen and (min-width: 1366px) and (max-height: 1024px) and (orientation: landscape) {
+  .container {
+    max-width: 1400px;
+  }
+
+  .hero-image {
+    display: block;
+  }
+
+  .hero {
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .header {
+    text-align: left;
+    padding-left: 1rem;
+    padding-top: 1rem;
+  }
+
+  .hero-content {
+    max-width: 100%;
+    padding: 4rem;
+  }
+
+  .content {
+    padding: 1rem;
+    max-width: 460px;
+  }
+
+  .content span {
+    font-size: 2rem;
+    letter-spacing: 0px;
+  }
+
+  .content span:nth-child(even) {
+    text-align: right;
+  }
+
+  .services::before,
+  .services::after,
+  .portfolio::before,
+  .portfolio::after {
+    transform: skewY(-5deg);
+    -webkit-transform: skew(-5deg);
+    -moz-transform: skew(-5deg);
+    -o-transform: skew(-5deg);
+    -ms-transform: skew(-5deg);
+  }
+
+  .services {
+    padding: 4rem;
+  }
+
+  .description,
+  .service-description {
+    max-width: 1000px;
+  }
+
+  .btn-contact {
+    width: 12.63rem;
+    height: 100%;
+  }
+
+  .portfolio-item {
+    margin: 2rem 0;
+    max-width: 1000px;
+  }
+
+  .portfolio-header {
+    font-size: 4rem;
+    align-self: center;
+  }
+
+  .portfolio-item img {
+    transform: scale(1.5);
+  }
+
+  .portfolio-item h3 {
+    align-self: center;
+  }
+
+  .logo {
+    width: 6.25rem;
+    height: 2rem;
+  }
+
+  .menu-icon {
+    font-size: 2.5rem;
+  }
+
+  .navbar {
+    padding: 1.5rem 3rem;
+  }
+
+  .footer span {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (min-width: 1400px) {
+  .container {
+    max-width: 1800px;
+  }
+
+  .hero {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    align-content: center;
+    justify-content: center;
+    grid-gap: 2rem;
+  }
+
+  .hero-content {
+    max-width: 100%;
+    padding: 6rem;
+    margin-left: 5rem;
+    overflow: hidden;
+  }
+
+  .header {
+    font-size: 5rem;
+  }
+
+  .content {
+    max-width: 560px;
+  }
+
+  .content span {
+    font-size: 2.5rem;
+  }
 }
