--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ body {
 
 a {
   text-decoration: none;
+  color: var(--secondary-color);
 }
 
 /* Common Classes */
@@ -86,7 +87,7 @@ a {
   margin: auto;
   padding: 2rem 1rem;
   background-color: #ddd;
-  color: #000;
+  color: var(--primary-color);
   list-style: none;
   transition: all 0.3s ease-in-out;
 }
@@ -148,7 +149,11 @@ a {
   text-align: right;
 }
 
-.hero-image {
+.hero-image,
+.about-image,
+.service-image,
+.arrow-icon,
+.about-arrow-icon {
   display: none;
 }
 
@@ -166,26 +171,6 @@ a {
   align-items: center;
   justify-content: center;
   position: relative;
-  overflow: visible;
-}
-
-.portfolio::before,
-.portfolio::after {
-  content: '';
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background: inherit;
-  z-index: -1;
-  top: 0;
-  transform-origin: left top;
-  transform: skewY(-5deg);
-}
-
-.portfolio::after {
-  bottom: 0;
-  transform-origin: left bottom;
-  transform: skewY(5deg);
 }
 
 /* Portfolio item */
@@ -215,14 +200,17 @@ a {
   margin: 1rem 0;
 }
 
+.portfolio-item .portfolio-image {
+  width: 100%;
+  height: 100%;
+}
+
 .portfolio-item p {
   margin: 2rem 0;
   font-weight: 700;
 }
 
 .portfolio-item .btn {
-  width: 10.63rem;
-  height: 100%;
   text-align: center;
   background: var(--primary-color);
   color: var(--secondary-color);
@@ -275,26 +263,6 @@ a {
   align-items: center;
   justify-content: center;
   position: relative;
-  overflow: visible;
-}
-
-.services::before,
-.services::after {
-  content: '';
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  background: inherit;
-  z-index: -1;
-  top: 0;
-  transform-origin: left top;
-  transform: skewY(-5deg);
-}
-
-.services::after {
-  bottom: 0;
-  transform-origin: left bottom;
-  transform: skewY(5deg);
 }
 
 .service-header {
@@ -309,6 +277,7 @@ a {
 }
 
 .service-description p {
+  display: inline-block;
   margin-bottom: 0.5rem;
 }
 
@@ -323,6 +292,11 @@ a {
   border-radius: 0.5rem;
 }
 
+.service-arrow-icon {
+  display: none;
+  color: var(--primary-color);
+}
+
 .footer {
   height: 100%;
   width: 100%;
@@ -332,14 +306,17 @@ a {
 }
 
 .footer span {
+  display: inline-block;
   height: 100%;
-  padding: 1rem;
+  width: 100%;
+  padding: 0.5rem;
+  font-weight: 500;
   font-family: 'Open Sans';
 }
 
 .footer .social {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   align-items: center;
   padding: 0 1rem;
   margin: 1rem 0;
@@ -619,7 +596,8 @@ a {
   }
 
   .footer span {
-    font-size: 1.5rem;
+    font-size: 1.4rem;
+    margin-bottom: 1rem;
   }
 }
 
@@ -653,5 +631,206 @@ a {
 
   .content span {
     font-size: 2.5rem;
+  }
+  .navbar-wrapper {
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .menu-icon {
+    display: none;
+  }
+  .navmenu {
+    transform: translateX(0) !important;
+    height: inherit;
+    flex-direction: row;
+    color: #ddd;
+    background: transparent;
+    position: relative;
+    margin: 0;
+    padding: 0 2rem;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+
+  .navmenu li {
+    font-size: 1.2rem;
+    padding: 0.5rem;
+  }
+  .navmenu li .arrow-icon {
+    display: none;
+  }
+
+  .hero {
+    position: relative;
+    height: 100vh;
+    margin: auto;
+  }
+
+  .hero-content {
+    width: 100%;
+    height: 100%;
+  }
+
+  .content {
+    margin-top: 4rem;
+    height: 90%;
+  }
+
+  .service-arrow-icon,
+  .arrow-icon,
+  .about-arrow-icon {
+    display: inline-block;
+    font-size: 2rem;
+    align-self: center;
+    position: absolute;
+    left: 50%;
+    bottom: 10%;
+  }
+
+  .services {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    width: 100%;
+    height: 100vh;
+    padding: 7rem;
+    justify-content: space-between;
+    /* overflow: hidden; */
+  }
+
+  .service-header {
+    font-size: 5rem;
+    align-self: flex-start;
+  }
+
+  .service-description {
+    height: 50vh;
+    max-width: 1100px;
+    align-self: flex-start;
+  }
+
+  .service-description p {
+    font-size: 1.5rem;
+    height: 400px;
+  }
+  .service-description p:first-child {
+    height: 150px;
+  }
+
+  .btn-contact {
+    align-self: flex-start;
+    height: 90px;
+    font-size: 1.2rem;
+    margin: 0;
+  }
+
+  .service-arrow-icon {
+    bottom: 5%;
+    color: var(--primary-color);
+  }
+
+  .service-image {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+
+  .about {
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    padding: 5rem;
+  }
+
+  .about-header {
+    align-self: flex-start;
+    font-size: 5rem;
+  }
+
+  .description {
+    font-size: 1.5rem;
+  }
+
+  #about {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    position: relative;
+  }
+
+  .about-image {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+
+  .about-arrow-icon {
+    display: inline-block;
+    bottom: 5%;
+    color: var(--secondary-color);
+  }
+
+  .portfolio {
+    height: 100%;
+    width: 100%;
+    align-items: stretch;
+    justify-content: center;
+    padding: 4rem;
+    position: relative;
+  }
+
+  .portfolio-header {
+    align-self: flex-start;
+    padding: 1.5rem;
+  }
+
+  .portfolio-item {
+    display: grid;
+    grid-template-columns: 4fr 2fr;
+    gap: 2rem;
+    grid-template-areas:
+      'a  b '
+      'a  b'
+      'd  b '
+      'c  b ';
+    align-items: start;
+    height: 100%;
+    max-width: 100%;
+    padding: 2rem;
+  }
+
+  .portfolio-item h3 {
+    grid-area: a;
+    font-size: 2.5rem;
+  }
+
+  .portfolio-item p {
+    grid-area: d;
+    font-size: 1.3rem;
+    line-height: 1.3;
+    width: 50%;
+    font-weight: 400;
+    height: 100%;
+  }
+
+  .portfolio-image {
+    grid-area: b;
+  }
+
+  .portfolio-item img {
+    transform: scale(1);
+  }
+
+  .portfolio-item .btn {
+    display: inline-block;
+    padding: 1rem 1.5rem;
+  }
+
+  .portfolio-item .buttons {
+    grid-area: c;
+    flex-direction: row;
+    justify-content: space-evenly;
+    height: 100%;
+    width: 50%;
   }
 }
