--- a/src/App.css
+++ b/src/App.css
@@ -496,10 +496,12 @@ a {
 @media screen and (min-width: 1366px) and (max-height: 1024px) and (orientation: landscape) {
   .container {
     max-width: 1400px;
+    overflow: hidden;
   }
 
   .hero-image {
-    display: block;
+    display: inline-block;
+    overflow: hidden;
   }
 
   .hero {
