--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@600;700&family=Overpass&display=swap');
+
+:root {
+  --dark-color: #333333;
+  --white-color: #ffffff;
+  --accent-color: #FA4B00;
+  --header-font: 'Nunito', sans-serif;
+  --text-font: 'Overpass', sans-serif;
+  --off-white: #f4f4f4;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
@@ -13,4 +22,17 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.container {
+  max-width: 1440px;
+  height: auto;
+  margin: auto;
+  padding: 2rem 3rem;
+}
+
+@media only screen and (max-width:576px) {
+  .container {
+    padding: 2rem;
+  }
 }
