--- a/styles/About.module.css
+++ b/styles/About.module.css
@@ -70,3 +70,41 @@
     display: none;
   }
 }
+
+@media screen and (max-width:899px) {
+  .image {
+    display: none;
+  }
+  
+  .grid {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .aboutWrapper {
+    padding: 1rem;
+  }
+
+  .aboutWrapper p {
+    max-width: 100%;
+  }
+}
+
+@media only screen and (max-width: 900px) and (orientation:landscape) {
+  .image {
+    display: none;
+  }
+
+  .grid {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .aboutWrapper {
+    padding: 1rem;
+  }
+
+  .aboutWrapper p {
+    max-width: 100%;
+  }
+}
