--- a/styles/Card.module.css
+++ b/styles/Card.module.css
@@ -34,7 +34,6 @@
 }
 
 @media only screen and (max-width:576px) {
-
   .section {
     display: flex;
     flex-direction: column;
@@ -44,9 +43,21 @@
   }
   .card {
     height: fit-content;
-    width: 100%;
+    width: 250px;
   }
   .card h2 {
     font-size: 1.5rem;
+  }
+}
+
+@media only screen and (max-width: 900px) and (orientation:landscape) {
+  .card {
+    width: 300px;
+    height: fit-content;
+  };
+
+  .section {
+    grid-template-columns: repeat(2, 1fr);
+    max-width: 100%;
   }
 }
