--- a/styles/Post.module.css
+++ b/styles/Post.module.css
@@ -47,6 +47,9 @@
 
 }
 
-@media only screen and (max-device-width:576px) and (orientation:landscape) {
-
+@media only screen and (max-width:900px) and (orientation:landscape) {
+  .content div figure img {
+    max-width: 100% !important;
+    height: 100%;
+  }
 }
