--- a/styles/Social.module.css
+++ b/styles/Social.module.css
@@ -15,3 +15,15 @@
     justify-content: space-around;
   }
 }
+
+@media only screen and (max-width:900px) and (orientation:landscape)  {
+  .container {
+    max-width: 80%;
+  }
+}
+
+@media only screen and (max-width:900px) and (orientation:portrait)  {
+  .container {
+    max-width: 80%;
+  }
+}
