--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,17 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  /* background-color: #FF3CAC;
+  background-image: linear-gradient(150deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);          
+  color: #f4f4f4;   */
 }
 
 a {
@@ -20,7 +28,15 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: black;
+    color: #f4f4f4;
+    background: #1e1e1e;
   }
+} 
+
+.section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border: 1px red solid;
 }
