--- a/styles/globals.css
+++ b/styles/globals.css
@@ -9,9 +9,6 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  /* background-color: #FF3CAC;
-  background-image: linear-gradient(150deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);          
-  color: #f4f4f4;   */
 }
 
 a {
@@ -22,7 +19,7 @@ a {
 * {
   box-sizing: border-box;
 }
-
+/* 
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
@@ -31,7 +28,7 @@ a {
     color: #f4f4f4;
     background: #1e1e1e;
   }
-} 
+}  */
 
 .section {
   display: flex;
